# xpub-session-api

./: Cargo.toml  README.md  SSL.md
examples/: bitcoin_core.rs  generate_sessions_key.rs  generate_xpriv.rs  sign_message.rs  sign_nonce.rs
src/: handlers.rs  lib.rs  main.rs  model.rs
src/handlers/auth/: users.rs
src/model/: db.rs  derivation.rs  psbt.rs  user.rs
tests/scripts/: alias_source.sh  curl_login_cookie_false.sh  curl_login_cookie_true.sh  output_example.txt  regtest.sh  regtest_setup.sh
tests/scripts/derive_address/: curl_address_A_0_0.sh  curl_address_A_0_1.sh
tests/scripts/get_address/: curl_address_A.sh  curl_address_B.sh
tests/scripts/login/: curl_login_cookie_true.sh  curl_login_cookie_true_A.sh  curl_login_cookie_true_B.sh  curl_login_cookie_true_C.sh  curl_login_cookie_true_D.sh
tests/scripts/regtest/: 6_second_blocks.sh  README.md  check_unspent.sh  get_descriptor_info.sh  regtest.sh  regtest_setup.sh
tests/scripts/users/: curl_login_cookie_true_A.sh  curl_login_cookie_true_B.sh  curl_login_cookie_true_D.sh
